# scraper-bot

./: .gitignore  clean_url.py  main.py  pyproject.toml  requirements.txt  scrapper.ipynb  url_explorer.ipynb  urls.txt
