[project]
name = "rag-scraper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "clear>=2.0.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "unstructured>=0.22.31",
]
